src/test/ui/macros/issue-88228.stderr
error: cannot find macro `bla` in this scope
  --> $DIR/issue-88228.rs:20:5
   |
LL |     bla!();
   |     ^^^
   |
   = note: consider importing this macro:
           crate::hey::bla

error: cannot find derive macro `println` in this scope
  --> $DIR/issue-88228.rs:14:10
   |
LL | #[derive(println)]
   |          ^^^^^^^
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find derive macro `Bla` in this scope
  --> $DIR/issue-88228.rs:9:10
   |
LL | #[derive(Bla)]
   |          ^^^
   |
   = note: consider importing this derive macro:
           crate::hey::Bla

error: aborting due to 3 previous errors

